sunuo (0.1.8) unstable; urgency=low

  * remove duplicate data directories

 --

sunuo (0.1.7) unstable; urgency=low

  * wait for send transfers to be finished before killing the connection
    in NetState.Dispose()
  * added test program "UOGQuery" which queries the UOGateway status of a
    freeshard
  * Mono 1.1.7 is now recommended
  * moved documentation to doc/sunuo.xml in DocBook format

 -- Max Kellermann <max@duempel.org>  Sun,  8 May 2005 22:37:47 +0200

sunuo (0.1.6) unstable; urgency=low

  * introduce the "path" element in the library configuration, allowing
    the administrator to specify arbitrary source paths
  * dependencies for libraries
  * overlays for libraries

 -- Max Kellermann <max@duempel.org>  Thu,  5 May 2005 21:14:32 +0200

sunuo (0.1.5) unstable; urgency=low

  * now really fixed a null cast in ScriptCompiler.CheckStamps()

 -- Max Kellermann <max@duempel.org>  Thu, 10 Mar 2005 21:48:12 +0100

sunuo (0.1.4) unstable; urgency=low

  * fixed a lot of C# compiler warnings
  * workaround for the RunUO faction bug: Reflection.cs assumes
    alphabetically sorted directory entries; ScriptCompiler.cs now sorts
    filenames before passing them to the compiler
  * fixed a null cast in ScriptCompiler.CheckStamps()

 -- Max Kellermann <max@duempel.org>  Thu,  3 Mar 2005 21:04:41 +0100

sunuo (0.1.3) unstable; urgency=low

  * work around mono-mcs 1.1.4 bug #72771: "Response file specified
    multiple times"
  * removed "/debug /optimize" parameters from ScriptCompiler
  * added a hack to work around the zlib portability bugs in the scripts

 -- Max Kellermann <max@duempel.org>  Sun, 20 Feb 2005 19:53:46 +0100

sunuo (0.1.2) unstable; urgency=low

  * another Mono bug workaround: pointer increments are 8 byte aligned,
    although Pack=1 is specified in the structure
  * exit on compiler error, don't allow the user to retry compilation
  * added BINFMT_MISC instructions, thanks to Wulf Krueger
  * added Mono 1.1 installation instructions
